# RustRocketMQTest

./: Cargo.toml
src/: cli.rs  log.rs  main.rs  timezone.rs  types.rs
src/cli/: producer.rs  simple_consumer.rs
