[package]
name = "RustRocketMQTest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
lap = "0.1.0"
rocketmq = { git = "https://github.com/apache/rocketmq-clients", version = "5.0.0" }
tokio = "1.50.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
tracing-appender = "0.2.3"
humantime = "2.3.0"
indoc = "2.0.7"
time = "0.3.47"
